# reliaburger

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml  ci.yml
benches/: gossip.rs  gossip_large.rs
docs/: README.md  progress.md  roadmap.md  whitepaper.md
docs/_quarto/: _quarto-book.yml  _quarto-design.yml  _quarto-roadmap.yml  _quarto-whitepaper.yml  _quarto.yml  design-index.md  index.md  roadmap.md  whitepaper.md
docs/book/: 00-preface.md  01-hello-container.md  02-finding-friends.md  02a-code-walkthrough.md  03-talking-to-each-other.md  04-trust-no-one.md  05-where-the-images-live.md  06-watching-everything.md  07-ship-it.md  08-breaking-things-on-purpose.md  09-ready-for-production.md  09-the-full-package.md  10-locking-it-down.md  11-eyes-everywhere.md  12-squeezing-every-drop.md  13-a-room-with-a-view.md  14-changing-the-tyres.md  15-ready-for-production.md
docs/design/: agent-bun.md  chaos-smoker.md  cli-relish.md  deployments.md  gitops-lettuce.md  gossip-mustard.md  ingress-wrapper.md  logs-ketchup.md  metrics-mayo.md  registry-pickle.md  scheduler-meat.md  security-sesame.md
ebpf/: onion_common.h  onion_connect.bpf.c  onion_dns.bpf.c  smoker_common.h
examples/: phase-1-minimal-app.toml  phase-1-restarts.toml
examples/phase-1/: apple-container-hello.toml  apple-container-nginx.toml  container-full-featured.toml  container-hello.toml  container-init-container.toml  container-job-failure.toml  container-multi-app.toml  container-nginx.toml  container-volumes.toml  full-featured.toml  init-container.toml  job-failure.toml  job-success.toml  multi-app.toml  proc-full-featured.toml  proc-init-container.toml  proc-job-failure.toml  proc-job-success.toml  proc-minimal-app.toml  proc-multi-app.toml  proc-restarts.toml  proc-volumes.toml  volumes.toml
examples/phase-8/: batch-jobs.toml  build-job.toml  chaos-scenario.toml  proc-exec-app.toml  proc-script-job.toml
scripts/: Dockerfile.pickle-test  deploy-demo.sh  kubernetes-yamls-demo.sh  observability-demo.sh  pickle-push-test.sh  relish-toml-demo.sh  workload-identity-demo.sh
src/: lib.rs
src/brioche/: app_detail.rs  assets.rs  dashboard.rs  fragments.rs  mod.rs  node_detail.rs  types.rs
src/bun/: agent.rs  api.rs  disk_pressure.rs  gpu.rs  health.rs  mod.rs  probe.rs  restart.rs  supervisor.rs  testapp.rs
src/config/: app.rs  build.rs  error.rs  job.rs  mod.rs  namespace.rs  node.rs  permission.rs  process_workloads.rs  types.rs  validate.rs
src/council/: log_store.rs  mod.rs  network.rs  node.rs  selection.rs  state_machine.rs  types.rs
src/firewall/: mod.rs  rules.rs
src/grill/: apple.rs  cgroup.rs  image.rs  mock.rs  mod.rs  netns.rs  oci.rs  port.rs  process.rs  process_workload.rs  rootless.rs  runc.rs  state.rs  volume.rs
src/ketchup/: export.rs  index.rs  json.rs  log_store.rs  mod.rs  query.rs  remote_query.rs  store.rs  types.rs
src/lettuce/: coordinator.rs  diff.rs  git.rs  mod.rs  sync.rs  types.rs  verify.rs  webhook.rs
src/mayo/: alert.rs  collector.rs  mod.rs  query_fanout.rs  rollup.rs  rollup_generator.rs  rollup_store.rs  rollup_worker.rs  scrape.rs  store.rs  types.rs  webhook.rs
src/meat/: autoscaler.rs  batch.rs  batch_tracker.rs  blue_green.rs  cluster_state.rs  deploy_types.rs  filter.rs  mod.rs  orchestrator.rs  quota.rs  scheduler.rs  score.rs  types.rs
src/mustard/: config.rs  dissemination.rs  membership.rs  message.rs  mod.rs  protocol.rs  state.rs  transport.rs
src/onion/: dns.rs  mod.rs  service_map.rs  types.rs  vip.rs
src/patty/: mod.rs  types.rs
src/pickle/: api.rs  build.rs  gc.rs  mod.rs  pull.rs  replication.rs  signing.rs  store.rs  types.rs
src/reconstruction/: controller.rs  diff.rs  mod.rs  types.rs
src/relish/: chaos.rs  client.rs  commands.rs  compile.rs  dev.rs  diff.rs  fault.rs  fmt.rs  k8s_export.rs  k8s_import.rs  mod.rs  output.rs  plan.rs
src/reporting/: aggregator.rs  assignment.rs  mod.rs  transport.rs  types.rs  worker.rs
src/sesame/: auth.rs  ca.rs  cert.rs  crypto.rs  egress.rs  firewall.rs  identity.rs  init.rs  join.rs  mod.rs  mtls.rs  oidc.rs  raft_encryption.rs  secret.rs  token.rs  types.rs
tests/: agent_cluster.rs  chaos.rs  chaos_smoker.rs  ebpf.rs  gossip_10k.rs  identity_demo.rs  integration.rs  log_export.rs  logs_cross_node.rs  metrics_aggregation.rs  onion.rs  reconstruction.rs  reporting_tree.rs  scheduling.rs  security_integration.rs
(+34 files in other folders)
