[package]
name = "reliaburger"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A batteries-included container orchestrator"

[lib]
name = "reliaburger"
path = "src/lib.rs"

[[bin]]
name = "bun"
path = "src/bin/bun.rs"

[[bin]]
name = "relish"
path = "src/bin/relish.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
