[package]
name = "reliaburger"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A batteries-included container orchestrator"

[lib]
name = "reliaburger"
path = "src/lib.rs"

[[bin]]
name = "bun"
path = "src/bin/bun.rs"

[[bin]]
name = "relish"
path = "src/bin/relish.rs"

[[bin]]
name = "testapp"
path = "src/bin/testapp.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process", "user", "sched", "net"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
toml = "0.8"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
siphasher = "1"
hex = "0.4"
dirs = "6"
tokio-stream = "0.1"
futures-util = "0.3"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
bincode = "1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
ring = "0.17"
rustls-pemfile = "2"
x509-parser = { version = "0.16", features = ["verify"] }
pem = "3"
argon2 = "0.5"
age = { version = "0.10", features = ["armor"] }
base64 = "0.22"
datafusion = "45"
object_store = { version = "0.12", features = ["fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

[features]
default = []
ebpf = ["aya", "aya-log"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
http-body-util = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "gossip"
harness = false

[[bench]]
name = "gossip_large"
harness = false
